@@ -68,6 +68,7 @@ x2goclient (4.0.1.2-0x2go2) UNRELEASED; urgency=low
       if x2gostartagent send LIMIT error. Current commit fixes this issue. 
     - SshMasterConnection should use current user name if no user name is
       specified in session settings
+    - GSSApi(Kerberos 5) authentication for sshproxy and sshbroker 
 
   [ Heinrich Schuchardt ]
   * New upstream version (4.0.1.2):
